--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "console.table": "^0.10.0",
     "express": "^4.16.4",
-    "inquirer": "^8.2.0",
+    "inquirer": "^8.1.2",
     "mysql2": "^2.3.0"
   },
   "devDependencies": {
